# Avelen

./: .env.example  .gitignore  Dockerfile  README.md  avelen.conf.example  chat_download.py  chat_download_history.json  cookies.txt  data.json  database.ddl  database.py  deal_error.py  douyin_scrapy.py  handler_douyin.py  handler_instagram.py  handler_weibo.py  instagram_scrapy.py  kill.sh  main.py  manage.py  modify_msg.py  nicefuturebot.py  package.py  pyproject.toml  requirements.txt  rmlock.sh  scrapy.py  send.py  start.sh  utils.py  webhook.py  weibo_scrapy.py
.github/workflows/: scheduled.yml
config/: platforms.toml
core/: database.py  downloader.py  following.py  logger.py  models.py  platform.py  post.py  scrapy_runner.py  sender_dispatcher.py  settings.py  utils.py
handler/: __init__.py  handler_bilibili.py  handler_douyin.py  handler_instagram.py  handler_weibo.py
ops/: chat_download.py  check_post_delivery.py  deal_error.py  delete_messages.py  johnmsg_sync.py  manage.py  modify_msg.py  modify_msg_legacy.py  nicefuturebot.py  package.py  process_posts.py
scrapy/: bilibili_scrapy.py  douyin_scrapy.py  instagram_scrapy.py  weibo_scrapy.py
tools/: database.py  deal_error.py  downloader.py  following.py  manage.py  nicefuturebot.py  pipeline.py  report.py  scrapy_runner.py  sender_dispatcher.py  settings.py  utils.py
