[project]
name = "weibo-tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji",
    "Flask",
    "gmssl",
    "opencv-python",
    "Pillow",
    "PyMySQL",
    "pandas",
    "python-telegram-bot[callback-data]",
    "Requests",
    "telethon",
    "urllib3",
    "loguru",
    "cryptography",
    "curl-cffi>=0.13.0",
    "playwright>=1.56.0",
    "pebble>=5.1.3",
    "fasttelethonhelper>=1.0.7",
    "func-timeout>=4.3.5",
    "pydash>=8.0.6",
    "yt-dlp>=2026.2.4",
]
