[project]
name = "avelen"
version = "0.1.0"
description = "Avelen: a personal multi-platform content scraper and Telegram delivery tool."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji",
    "fasttelethonhelper>=1.0.7",
    "filelock>=3.25.2",
    "gmssl",
    "loguru",
    "lxml>=6.0.2",
    "pillow",
    "pydash>=8.0.6",
    "pymysql",
    "python-telegram-bot[callback-data]",
    "requests",
    "rich>=14.3.3",
    "telethon",
    "urllib3",
    "yt-dlp>=2026.2.4",
]
